--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,9 @@ html{
 }
 
 body{
-    background: linear-gradient(to right, #209ef1, #0e4a72);
+   background: linear-gradient(to right, #164b6e, #609ec7); 
     color: #f4f4f4;
     line-height: 1.6;
-}
-
-.i{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
 }
 
 .container{
@@ -29,7 +22,8 @@ body{
 
 .bin2Dec{
     width: 35rem;
-    background: linear-gradient(to bottom, #0e4a72 #fff);
+    background: linear-gradient(to right, #209ef1, #0e4a72);
+   /*  background: linear-gradient(to bottom, #0e4a72 #fff); */
    /*  background-color: #0e4a72; */
     border-radius: 2rem;
     box-shadow: 0px 4px 3rem #535151;
@@ -53,7 +47,60 @@ body{
    background-color: #f4f4f4;
     border-radius: 3rem;
     height: 73vh; 
-    padding: 5rem 2rem;
+    padding: 10rem 1rem;
     color: #0e4a72;
 }
-/* #24A1F2 */
+
+.outputField{
+    background: linear-gradient(to left, #e9ecee, #fcfcff);
+    border-radius: 1rem;
+    padding: 1rem;
+    margin-bottom: 6rem;
+    color: #067fcf;
+    font-size: 3rem;
+    text-align: center;
+    font-weight: 900;
+    
+}
+
+.inputField{
+    background: linear-gradient(to left, #d0e0e0, #edf1f1);
+    border-radius: 1rem;
+    padding: 4rem 1rem;
+    flex-direction: column;
+    display:flex;
+    flex-direction: column;
+}
+
+.inputField__binaryField{
+    font-size: 2.1rem;
+    font-weight: 700;
+    padding-bottom: 2rem;
+    font-family: 'Ubuntu';
+    text-align: center;
+}
+
+.inputField__getBinary{
+    padding: 1.7rem 2rem;
+    border-radius: 2rem;
+    border: none;
+    margin-bottom: 5rem;
+}
+
+.inputField__getBinary:focus{
+    outline: none;
+}
+
+.inputField__submitBinary{
+    background: linear-gradient(to right, #209ef1, #0e4a72);
+    color: #f4f4f4;
+    font-weight: 700;
+    font-size: 2rem;
+    padding: 1.5rem;
+    border: none;
+    border-radius: 1rem;
+}
+
+.inputField__submitBinary:focus{
+    outline: none;
+}
