--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 html{
@@ -10,7 +11,6 @@ html{
 
 body{
     background: linear-gradient(to right, #bac1c5, #cbd1d4);
- /*    background: linear-gradient(to right, #164b6e, #609ec7); */
     color: #f4f4f4;
     line-height: 1.6;
     display: flex;
@@ -23,10 +23,8 @@ body{
 
 .bin2Dec{
   background: linear-gradient(to right, #209ef1, #0e4a72); 
-   /*  background: linear-gradient(to bottom, #0e4a72 #fff); */
-   /*  background-color: #0e4a72; */
-    border-radius: 2rem;
-    box-shadow: 0px 4px 3rem #535151;
+  border-radius: 2rem;
+  box-shadow: 0px 4px 3rem #535151;
 }
 
 .main-text{
@@ -39,7 +37,7 @@ body{
 }
 
 .mainitext__sub-text{
-    font-size: 1.7rem;
+    font-size: 1.4rem;
     font-family: 'Roboto';
 }
 
@@ -87,7 +85,7 @@ body{
     padding: 1.7rem 2rem;
     border-radius: 2rem;
     border: none;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
 }
 
 .inputField__getBinary:focus{
@@ -111,4 +109,50 @@ body{
 footer{
     font-size: 1.6rem;
     color: #c00b05;
+}
+
+footer a{
+    color:#c00b05;
+    cursor: pointer;
+}
+
+@media(max-width: 400px){
+    .bin2Dec{
+        width: 25rem;
+      }  
+
+    .main-text__primary-text{
+        font-size: 2rem;
+    }
+    
+    .mainitext__sub-text{
+        font-size: 1.2;
+        font-style: italic;
+    }
+
+.outputField{
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+}
+
+
+    .output-Text{
+        font-size: 1.6rem;
+    }
+
+    .inputField__binaryField{
+        font-size: 1.6rem;
+        padding-bottom: 1rem;
+    }
+
+    .section-2{
+         padding: 1.5rem 1rem;
+     }
+    
+}
+
+@media(max-width: 265px){
+    .bin2Dec{
+        width: 20rem;
+      }  
 }
